--- a/index.html
+++ b/index.html
@@ -5,32 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="/css/style.css">
+
   <title>Frontend Mentor | Product preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Preview
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
+  <header class="header">
+    <div class="header__img"></div>
+  </header>
+  <main>
+    <div class="info">
+      <div class="info__container container">
+        <h1 class="info__product-title">
+          <span class="overline">Perfume</span>
+          Gabrielle Essence Eau De Parfum
+        </h1>
+          <p class="info__product-description">
+            A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.
+          </p>
+      </div>
+    </div>
+    <div class="pricing">
+      <div class="pricing__container container">
+        <h1 class="pricing__product-price">$149.99&nbsp;&nbsp;<span>$169.99</span></h1>
+      </div>
+      <a href="purchase-btn btn">Add to Cart</a>
+    </div>
+  </main>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Matt Lennon</a>.
   </div>
 </body>
 </html>
