--- a/index.html
+++ b/index.html
@@ -12,23 +12,31 @@
 </head>
 <body>
   <main class="main">
-    <div class="display">
-      <div class="display__container container">
-        <div class="display__img"></div>
-        <h1 class="display__title">
-          <span class="overline">Perfume</span>
-          Gabrielle Essence Eau De Parfum
-        </h1>
-          <p class="display__body">
-            A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.
-          </p>
+    <div class="card">
+      <div class="display">
+        <picture class="display__img">
+          <source srcset="images/image-product-desktop.jpg" media="(min-width: 1100px)" >
+          <source srcset="images/image-product-mobile.jpg" media="(min-width: 280px)">
+          <img src="images/image-product-mobile.jpg" alt="perfume product">
+        </picture>
+        <div class="display__container container">
+          <h2 class="overline">Perfume</h2>
+          <h1 class="display__title">
+            Gabrielle Essence Eau De Parfum
+          </h1>
+            <p class="display__body">
+              A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.
+            </p>
+        </div>
       </div>
-    </div>
-    <div class="pricing">
-      <div class="pricing__container container">
-        <h1 class="pricing__display-price">$149.99&nbsp;&nbsp;<span class="display-original-price">$169.99</span></h1>
-        <a href="pricing__btn btn">
-          <p class="btn-text">Add to Cart</p>
+      <div class="pricing">
+        <div class="pricing__container container">
+          <h1 class="pricing__display-price">$149.99</h1>
+          <p class="display-original-price"><s>$169.99</s></p>
+        </div>
+        <a class="pricing__btn btn" href="#">
+          <img class="cart" src="images/icon-cart.svg" alt="shopping cart">
+          Add to Cart
         </a>
       </div>
     </div>
